; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_avr.c___generic_pop.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_avr.c___generic_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"1,sp,+,_ram,+,\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"[%d],\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"%d,sp,+=,\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"1,sp,+=,sp,_ram,+,[1],\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @__generic_pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__generic_pop(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sgt i32 %5, 1
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = call i32 (i8*, ...) @ESIL_A(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* %4, align 4
  %10 = call i32 (i8*, ...) @ESIL_A(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 (i8*, ...) @ESIL_A(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 %11)
  br label %15

13:                                               ; preds = %2
  %14 = call i32 (i8*, ...) @ESIL_A(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %7
  ret void
}

declare dso_local i32 @ESIL_A(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
